--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "server": "node -r esbuild-runner/register bin/server.ts",
     "start": "node -r esbuild-runner/register index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,11 +19,16 @@
   },
   "homepage": "https://github.com/yoshikouki/openai-sandbox#readme",
   "dependencies": {
+    "@line/bot-sdk": "^7.5.2",
     "dotenv": "^16.0.3",
     "esbuild-runner": "^2.2.2",
+    "express": "^4.18.2",
+    "helmet": "^6.0.1",
+    "morgan": "^1.10.0",
     "openai": "^3.1.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.10",
     "typescript": "^4.9.3"
   }
