--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "build": "etsc",
     "server": "node -r esbuild-runner/register bin/server.ts",
+    "dev:server": "npm run build && nodemon",
     "start": "node -r esbuild-runner/register index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,7 +31,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.10",
+    "esbuild": "^0.15.16",
+    "esbuild-node-tsc": "^2.0.4",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.3"
   }
 }
