--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "build": "etsc",
-    "server": "node -r esbuild-runner/register bin/server.ts",
+    "server": "node -r esbuild-runner/register src/index",
     "dev:server": "npm run build && nodemon",
     "start": "node -r esbuild-runner/register index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
